--- a/2022/07/16.md
+++ b/2022/07/16.md
@@ -3,3 +3,6 @@ its almost 9am in the morning and i haven't slept all night,
 pulling multiple all nighters can be dangerous to my mental
 health so i'll go to sleep after i test some rust graphics
 libraries, mainly `wgpu` and any other opengl libraries
+
+# 9:07
+`wgpu` it is
