--- a/2022/07/16.md
+++ b/2022/07/16.md
@@ -6,3 +6,9 @@ libraries, mainly `wgpu` and any other opengl libraries
 
 # 9:07
 `wgpu` it is
+
+# 7:19
+i drifted into sleep at around 11:30 am and woke up at 6:30
+pm. man, my sleep schedule is really f'ed up.
+anyway, working on my `liquid_text` project cheered me up
+a little bit, so back to my video
