--- a/2022/07/25.md
+++ b/2022/07/25.md
@@ -5,3 +5,6 @@ spent last 2 hours learned something...
 `(dyn Fn(f32) -> f32 + 'static)` cannot be sent between threads safely
 ```
 can be solved just by adding an `Send` to the `dyn Fn(f32) -> f32` :p
+
+# 4:17 am
+my mind is about to fucking explode, ahhhhh!!!!!!!!
