--- a/2022/07/25.md
+++ b/2022/07/25.md
@@ -8,3 +8,6 @@ can be solved just by adding an `Send` to the `dyn Fn(f32) -> f32` :p
 
 # 4:17 am
 my mind is about to fucking explode, ahhhhh!!!!!!!!
+
+# 4:53 am
+ok, i made an important revelation today, i don't love philosophy, computer science, mathematics or anything, its something far more abstract, i love symbols, i love writing them with a pen, on a keyboard, storing them, organizing them, making changes to them, yeah that's it, its symbols i always loved
